lesson_03/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: hello-world-srv
spec:
    selector:
        app: hello-world-app-dep
    ports:
        - protocol: TCP
          port: 9000
          targetPort: web
#          nodePort: 30000
#    type: ClusterIP
    type: NodePort
