lesson_03/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: hello-world-ing
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/rewrite-target: /hello.world/api/v1/$2
spec:
    rules:
#        - host: hello.world
        - http:
              paths:
                  - path: /otusapp($|/)(.*)
                    backend:
                        serviceName: hello-world-srv
                        servicePort: 9000
